add clang-format test

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,3 +22,9 @@ dist_doc_DATA = \
 	README.md
 
 EXTRA_DIST=autogen.sh
+
+# Check the C++ source code for white-space errors with clang-format.
+clang-format:
+	for i in *pp; do clang-format -style=file $$i >$$i.fixed; done
+	for i in *pp; do diff -su $$i $$i.fixed && rm -f $$i.fixed; done
+	if ls *.fixed; then exit 1; fi
