--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,12 @@ jobs:
       ./configure
       make
     displayName: Compiliation test
+  - script: |
+      curl https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+      sudo apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-7 main"
+      sudo apt-get update
+      sudo apt-get install -y --no-install-recommends clang-format-7
+      sudo ln -s clang-format-7 /usr/bin/clang-format
+    displayName: Install clang-format
+  - script: make clang-format
+    displayName: Run clang-format
