--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ jobs:
   - script: |
       ./autogen.sh
       ./configure
-      make
-    displayName: Compiliation test
+      make distcheck
+    displayName: Compiliation and unit test
