--- a/configure.ac
+++ b/configure.ac
@@ -83,5 +83,9 @@ AC_SUBST(LDFLAGS, "$OPENMP_CXXFLAGS $LDFLAGS")
 AC_SUBST(AM_CXXFLAGS, '-Wall -Wextra -Werror')
 
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([
+				Makefile
+				unittest/Makefile
+				vendor/Makefile
+])
 AC_OUTPUT
