--- a/meson.build
+++ b/meson.build
@@ -39,3 +39,11 @@ if get_option('buildtype') != 'release'
     )
     test('tests', test_exec)
 endif
+
+doxygen = find_program('doxygen', required: false)
+if doxygen.found()
+    message('Doxygen found')
+    run_target('docs', command: [doxygen, meson.source_root() + '/Doxyfile'])
+else
+    warning('Documentation disabled without doxygen')
+endif
