Add headers to installation path

--- a/meson.build
+++ b/meson.build
@@ -28,6 +28,8 @@ lib_dep = declare_dependency(
     include_directories: include_dirs,
 )
 
+install_headers('include/nthash/nthash.hpp', install_dir: 'include/nthash')
+
 if get_option('buildtype') != 'release'
     executable(
         'bench',
