Fix doxygen issue

--- a/meson.build
+++ b/meson.build
@@ -50,7 +50,7 @@ endif
 doxygen = find_program('doxygen', required: false)
 if doxygen.found()
     message('Doxygen found')
-    run_target('docs', command: [meson.source_root() + '/update-docs.sh'])
+    run_target('docs', command: [meson.project_source_root() + '/update-docs.sh'])
 else
     warning('Documentation disabled without doxygen')
 endif
